test/files/neg/volatile.check
volatile.scala:11: error: Inferred type C.this.D with C.this.E#T contains type selection from volatile type C.this.D with C.this.E
   var sneak = { () => y.x }
                         ^
volatile.scala:11: error: Inferred type () => C.this.D with C.this.E#T contains type selection from volatile type C.this.D with C.this.E
   var sneak = { () => y.x }
                    ^
two errors found
